Fix compilation errors and formatting after merge